--- a/css/style.css
+++ b/css/style.css
@@ -94,15 +94,13 @@ body {
   top: 0;
   height: 100%;
   width: 100%;
-  background: #2D2137;
+  background-color: rgba(45, 33, 55, 0.6);
   color: #fff;
   -webkit-transition: height .5s; /* Safari */
 	      transition: height .5s;
 }
 
-.nav-opacity{
-    opacity: 0.6;
-}
+
 
 .button .navbar-toggle {
 	margin: 10%;
@@ -159,6 +157,7 @@ nav img[src="img/logo.png"] {
 	opacity: 1;
     z-index: 9999;
     box-shadow: 2px 2px 10px black;
+    background-color: rgba(45, 33, 55, 1) !important;
 }
 
 .scrolled-nav img {
@@ -330,7 +329,6 @@ footer {
 	background-color: #282536;
 	color: white;
 	margin-top: 10%;
-	border-top: 2px solid black;
 }
 
 .contact {
@@ -393,6 +391,7 @@ footer .second_btn {
     nav li {
         display: inline-block;
         padding: 0 3%;
+        background-color: transparent;
     }
    
    .scroll-ul {    
